syntax = "proto3";
package com.example.grpc;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string id = 1;
  string name = 2;
}

service ProviderService {
  rpc send(HelloRequest) returns (HelloResponse);
}